--- a/Index.html
+++ b/Index.html
@@ -73,7 +73,7 @@
 <P ALIGN="CENTER">
 &nbsp;<BR>
 <FONT FACE="TH Sarabun New" SIZE="10" COLOR="blue">
-<a href="./Contact.html">ติดต่อชั้น</a>
+<a href="./contact.html">ติดต่อชั้น</a>
 </FONT>
 </P>
 
@@ -88,4 +88,5 @@
 
 <body>
   </html>
+
 </body>
