--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,8 @@
 </marquee>
 
 <p align="center"> 
-<img src="<a href="https://pic.in.th/image/pic-website.wxZPFW"><img src="https://img2.pic.in.th/pic/pic-website.jpg" alt="pic website" border="0"></a>"ชนพัฒน์ แก้วศรี" 
+<img src="<img src="<a href="https://pic.in.th/image/pic-website.wxZPFW"><img src="https://img2.pic.in.th/pic/pic-website.jpg" alt="pic website" width="400" height="auto" border="0"></a> </a>
+"ชนพัฒน์ แก้วศรี" 
  <ol>
     <ol>
     <p align="center">
@@ -88,5 +89,4 @@
 
 <body>
   </html>
-
 </body>
