--- a/Index.html
+++ b/Index.html
@@ -74,7 +74,7 @@
 <P ALIGN="CENTER">
 &nbsp;<BR>
 <FONT FACE="TH Sarabun New" SIZE="10" COLOR="blue">
-<a href="./contact.html">ติดต่อชั้น</a>
+<a href="./Contact.html">ติดต่อชั้น</a>
 </FONT>
 </P>
 
@@ -90,3 +90,4 @@
 <body>
   </html>
 </body>
+
